<resources>
    <string name="app_name">Musical Structure</string>
    <string name="now_playing">Now playing %s</string>
    <string name="now_playing_label_activity">Now playing</string>
    <string name="album_songs_label_activity">Album songs</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Jump to next song</string>
    <string name="previous">Jump to previous song</string>
    <string name="album_image">Album image</string>
    <string name="artist_name">Artist name</string>
    <string name="album_name">Album name</string>
    <string name="song_title">Song title</string>
    <string name="now_playing_image">Now playing</string>
    <string name="albums_label">Here you find albums with great music</string>
    <string name="songs_label">Here you find all songs from selected album</string>
    <string name="now_playing_label">Here you find the playing song</string>
    <string name="placebo">Placebo</string>
    <string name="the_cranberries">The Cranberries</string>
    <string name="nirvana">Nirvana</string>
    <string name="radiohead">Radiohead</string>
    <string name="coldplay">Coldplay</string>
    <string name="placebo_loud_like_love">Loud Like Love</string>
    <string name="the_cranberries_no_need_to_argue">No Need To Argue</string>
    <string name="nirvana_nevermind">Nevermind</string>
    <string name="radiohead_pablo_honey">Pablo Honey</string>
    <string name="coldplay_viva_la_vida_or_death">Viva la Vida or Death and All His Friends</string>
    <string name="placebo_scene_of_the_crime">Scene of the Crime</string>
    <string name="placebo_too_many_friends">Too Many Friends</string>
    <string name="placebo_hold_on_to_me">Hold on to Me</string>
    <string name="placebo_rob_the_bank">Rob the Bank</string>
    <string name="placebo_a_million_little_pieces">A Million Little Pieces</string>
    <string name="placebo_exit_wounds">Exit Wounds</string>
    <string name="placebo_purify">Purify</string>
    <string name="placebo_begin_the_end">Begin the End</string>
    <string name="placebo_bosco">Bosco</string>
    <string name="the_cranberries_ode_to_my_family">Ode to My Family</string>
    <string name="the_cranberries_i_cant_be_with_you">I Can\'t Be with You</string>
    <string name="the_cranberries_twenty_one">Twenty One</string>
    <string name="the_cranberries_zombie">Zombie</string>
    <string name="the_cranberries_empty">Empty</string>
    <string name="the_cranberries_everything_i_said">Everything I Said</string>
    <string name="the_cranberries_the_icicle_melts">The Icicle Melts</string>
    <string name="the_cranberries_disappointment">Disappointment</string>
    <string name="the_cranberries_ridiculous_thoughts">Ridiculous Thoughts</string>
    <string name="the_cranberries_dreaming_my_dreams">Dreaming My Dreams</string>
    <string name="the_cranberries_yeats_grave">Yeats\' Grave</string>
    <string name="the_cranberries_daffodil_lament">Daffodil Lament</string>
    <string name="nirvana_smells_like_teen_spirit">Smells Like Teen Spirit</string>
    <string name="nirvana_in_bloom">In Bloom</string>
    <string name="nirvana_come_as_you_are">Come as You Are</string>
    <string name="nirvana_breed">Breed</string>
    <string name="nirvana_lithium">Lithium</string>
    <string name="nirvana_polly">Polly</string>
    <string name="nirvana_territorial_pissings">Territorial Pissings</string>
    <string name="nirvana_drain_you">Drain You</string>
    <string name="nirvana_lounge_act">Lounge Act</string>
    <string name="nirvana_stay_away">Stay Away</string>
    <string name="nirvana_on_a_plain">On a Plain</string>
    <string name="nirvana_something_in_the_way">Something in the Way</string>
    <string name="radiohead_you">You</string>
    <string name="radiohead_creep">Creep</string>
    <string name="radiohead_how_do_you">How Do You?</string>
    <string name="radiohead_stop_whispering">Stop Whispering</string>
    <string name="radiohead_thinking_about_you">Thinking About You</string>
    <string name="radiohead_anyone_can_play_guitar">Anyone Can Play Guitar</string>
    <string name="radiohead_ripcord">Ripcord</string>
    <string name="radiohead_vegetable">Vegetable</string>
    <string name="radiohead_prove_yourself">Prove Yourself</string>
    <string name="radiohead_i_cant">I Can\'t</string>
    <string name="radiohead_lurgee">Lurgee</string>
    <string name="radiohead_blow_out">Blow Out</string>
    <string name="coldplay_life_in_technicolor">Life in Technicolor</string>
    <string name="coldplay_cemeteries_of_london">Cemeteries of London</string>
    <string name="coldplay_lost_ex">Lost!</string>
    <string name="coldplay_42">42</string>
    <string name="coldplay_lovers_in_japan">Lovers in Japan/Reign of Love</string>
    <string name="coldplay_yes">Yes</string>
    <string name="coldplay_viva_la_vida">Viva la Vida</string>
    <string name="coldplay_violet_hill">Violet Hill</string>
    <string name="coldplay_strawberry_swing">Strawberry Swing</string>
    <string name="coldplay_death_and_all_his_friends">Death and All His Friends</string>
    <string name="coldplay_lost_qu">Lost?</string>
    <string name="coldplay_lovers_in_japan_acoustic">Lovers in Japan (Acoustic Version)</string>
    <string name="coldplay_death_will_never_conquer">Death Will Never Conquer</string>
</resources>
