<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/album_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/album_image" />

    <TextView
        android:id="@+id/album_name_view"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/text_16"
        tools:text="@string/album_name" />

    <TextView
        android:textAllCaps="true"
        android:id="@+id/artist_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryText"
        tools:text="@string/artist_name" />

</LinearLayout>