<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/album_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="@dimen/padding_16">

        <ImageView
            android:id="@+id/songs_album_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_16"
            android:contentDescription="@string/album_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songs_album_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/text_16"
                tools:text="@string/album_name" />

            <TextView
                android:id="@+id/songs_artist_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/secondaryText"
                tools:text="@string/artist_name" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/album_details"
        android:paddingLeft="@dimen/padding_16"
        android:paddingRight="@dimen/padding_16"
        android:text="@string/songs_label"
        android:textColor="@color/secondaryText" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/now_playing_view"
        android:layout_below="@id/label"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_8"
        android:paddingLeft="@dimen/padding_16"
        android:paddingRight="@dimen/padding_16"
        android:paddingTop="@dimen/padding_8" />

    <LinearLayout
        android:id="@+id/now_playing_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/orangeBackground"
        android:orientation="horizontal"
        android:padding="@dimen/padding_8"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/now_playing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/now_playing_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/text_18"
                android:textStyle="bold"
                tools:text="@string/song_title" />

            <TextView
                android:id="@+id/now_playing_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textWhite"
                tools:text="@string/artist_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>