<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructure.NowPlayingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/now_playing_label"
            android:textColor="@color/secondaryText" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_16"
            android:contentDescription="@string/now_playing_image"
            android:src="@drawable/nowplaying" />

        <TextView
            android:id="@+id/song_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/text_16" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <SeekBar
                android:layout_width="@dimen/width_300"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:max="100"
                android:progress="25" />

            <ImageView
                android:id="@+id/play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
